# pipeline4onePhoton

./: .gitignore  LICENSE  README.md  config.yaml  pyproject.toml  requirements.txt
docs/: pipeline_a_deeplabcut.md  pipeline_b_caiman_setup.md
notebooks/: LICENSE.GPL  SingleMouseTracking_via_DeepLabCut.ipynb  cnmfE_pipeline(pipeline_b).ipynb
pipeline4onePhoton/: __init__.py  cli.py  config.py
pipeline4onePhoton/pipeline_c/: __init__.py  nidq_processor.py
pipeline4onePhoton/pipeline_d/: __init__.py  merger.py
pipeline4onePhoton/pipeline_e/: __init__.py  active_cells.py
pipeline4onePhoton/pipeline_f/: __init__.py  place_fields.py
pipeline4onePhoton/utils/: __init__.py  io_utils.py
