[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "1p-spatial-pipeline"
version = "0.1.0"
description = "A user-friendly CLI pipeline for one-photon spatial coding analysis with miniscope recordings"
readme = "README.md"
license = {text = "BSD-3-Clause"}
requires-python = ">=3.8"
authors = [
    {name = "nctrl-ephys contributors"}
]
keywords = [
    "one-photon imaging",
    "spatial coding",
    "miniscope",
    "neuroscience",
    "place cells",
    "place fields",
    "CNMF-E",
    "DeepLabCut"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Image Processing",
]
dependencies = [
    "numpy>=1.20",
    "scipy>=1.7",
    "pandas>=1.3",
    "matplotlib>=3.4",
    "pyyaml>=6.0",
    "click>=8.0",
    "rich>=10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.scripts]
1p-spatial-pipeline = "pipeline4onePhoton.cli:main"

[project.urls]
Homepage = "https://github.com/ylemnox/1p-spatial-pipeline"
Documentation = "https://github.com/ylemnox/1p-spatial-pipeline#readme"
Repository = "https://github.com/ylemnox/1p-spatial-pipeline"
Issues = "https://github.com/ylemnox/1p-spatial-pipeline/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["pipeline4onePhoton*"]
